--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "requests>=2.31",
     "click>=8.1",
     "rich>=13.0",
+    "build>=1.3.0",
 ]
 
 [project.optional-dependencies]
