--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,22 @@
 [project]
 name = "tuxsync"
-version = "0.1.0"
+dynamic = ["version"]
 description = "A Linux CLI tool for syncing packages and configurations across machines - like Migration Assistant for Linux"
 readme = "README.md"
 authors = [
-    { name = "Gururagavendra85", email = "gururagavendra.v@rapyuta-robotics.com" }
+    { name = "Gururagavendra", email = "guruvelu85@gmail.com" }
 ]
 requires-python = ">=3.10"
-keywords = ["linux", "dotfiles", "sync", "cli", "profile", "backup", "restore"]
+keywords = ["linux", "dotfiles", "sync", "cli", "profile", "backup", "restore", "tuxmate"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Environment :: Console",
     "Intended Audience :: Developers",
     "Intended Audience :: System Administrators",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: POSIX :: Linux",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
     "Topic :: System :: Systems Administration",
 ]
 dependencies = [
@@ -47,7 +45,14 @@ Repository = "https://github.com/Gururagavendra/tuxsync"
 Issues = "https://github.com/Gururagavendra/tuxsync/issues"
 
 [build-system]
-requires = ["uv_build>=0.9.12,<0.10.0"]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.version]
+path = "src/tuxsync/__init__.py"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/tuxsync"]
 build-backend = "uv_build"
 
 [tool.ruff]
